# bp

./: .gitignore  CMakeLists.txt  README.md  temp.py
DataGeneration/: Sampler.cpp  Sampler.h  Shapes.cpp  Shapes.h  main.cpp
HullComputation/: Calc.cpp  Calc.h  MarchingCubes.h  MarchingSquares.h  Parameters.cpp  Parameters.h  Reader.cpp  Reader.h  Timer.cpp  Timer.h  Viewer.cpp  Viewer.h  Writer.cpp  Writer.h  main.cpp
HullRendering/: Controller.cpp  Controller.h  Loader.cpp  Loader.h  Render.cpp  Render.h  main.cpp
HullRendering/shaders/: contour.fragmentshader  contour.vertexshader  standard.fragmentshader  standard.vertexshader
